--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'pokemon-font';
-  src: url('fonts/pokemon-font.woff2') format('woff2')
+  src: url('/fonts/pokemon-font.woff2') format('woff2')
 }
 
 body {
