Add userContext and use in profile form

--- a/src/components/layout/Layout.module.scss
+++ b/src/components/layout/Layout.module.scss
@@ -2,6 +2,8 @@
   padding: 0 var(--poke-spacing-4);
 
   header {
+    display: flex;
+    justify-content: space-between;
     padding: var(--poke-spacing-4) 0;
   }
 
